# whisper_trans

./: README.md  main.py  pyproject.toml  transcribe.py
